// Generated from ifex_scheduler.ifex by covesa-ifex-core
// DO NOT EDIT - regenerate with: ./generate_proto.sh
syntax = "proto3";



package swdv.ifex_scheduler;

// Namespace: core
// Core scheduling functionality

// Job execution status
enum job_status_t {
  PENDING = 0;
  RUNNING = 1;
  COMPLETED = 2;
  FAILED = 3;
  CANCELLED = 4;
  PAUSED = 5;
}

// Calendar view types
enum view_type_t {
  DAY = 0;
  WEEK = 1;
  MONTH = 2;
  RANGE = 3;
}

// Vehicle wake behavior for scheduled jobs
enum wake_policy_t {
  NO_WAKE = 0;
  WAKE_REQUIRED = 1;
}

// Vehicle sleep behavior during job execution
enum sleep_policy_t {
  SLEEP_NORMAL = 0;
  INHIBIT_UNTIL_COMPLETE = 1;
}

// Complete job information
message job_t {
  string id = 1;
  string title = 2;
  string service = 3;
  string method = 4;
  string parameters = 5;
  string scheduled_time = 6;
  string recurrence_rule = 7;
  string end_time = 8;
  job_status_t status = 9;
  string created_at = 10;
  string updated_at = 11;
  string executed_at = 12;
  string next_run_time = 13;
  string error_message = 14;
  string result = 15;
  string service_address = 16;
  wake_policy_t wake_policy = 17;
  sleep_policy_t sleep_policy = 18;
  uint32 wake_lead_time_s = 19;
}

// Filter criteria for retrieving jobs
message job_filter_t {
  string start_date = 1;
  string end_date = 2;
  string service = 3;
  job_status_t status = 4;
  bool has_status_filter = 5;
  bool include_completed = 6;
}

// Information needed to create a new job
message job_create_t {
  string job_id = 1;
  string title = 2;
  string service = 3;
  string method = 4;
  string parameters = 5;
  string scheduled_time = 6;
  string recurrence_rule = 7;
  string end_time = 8;
  string service_address = 9;
  wake_policy_t wake_policy = 10;
  sleep_policy_t sleep_policy = 11;
  uint32 wake_lead_time_s = 12;
}

// Fields that can be updated in an existing job
message job_update_t {
  string title = 1;
  string scheduled_time = 2;
  string recurrence_rule = 3;
  string end_time = 4;
  string parameters = 5;
  string service_address = 6;
  wake_policy_t wake_policy = 7;
  sleep_policy_t sleep_policy = 8;
  uint32 wake_lead_time_s = 9;
}

// Method: create_job
// Create a new scheduled job
message create_job_request {
  job_create_t job = 1;
}

message create_job_response {
  bool success = 1;
  string job_id = 2;
  string message = 3;
}

service create_job_service {
  rpc create_job(create_job_request) returns (create_job_response);
}

// Method: get_jobs
// Retrieve jobs based on filter criteria
message get_jobs_request {
  job_filter_t filter = 1;
}

message get_jobs_response {
  bool success = 1;
  repeated job_t jobs = 2;
}

service get_jobs_service {
  rpc get_jobs(get_jobs_request) returns (get_jobs_response);
}

// Method: get_job
// Retrieve a specific job by ID
message get_job_request {
  string job_id = 1;
}

message get_job_response {
  bool success = 1;
  job_t job = 2;
  string message = 3;
}

service get_job_service {
  rpc get_job(get_job_request) returns (get_job_response);
}

// Method: update_job
// Update an existing job
message update_job_request {
  string job_id = 1;
  job_update_t updates = 2;
}

message update_job_response {
  bool success = 1;
  string message = 2;
}

service update_job_service {
  rpc update_job(update_job_request) returns (update_job_response);
}

// Method: delete_job
// Delete a scheduled job
message delete_job_request {
  string job_id = 1;
}

message delete_job_response {
  bool success = 1;
  string message = 2;
}

service delete_job_service {
  rpc delete_job(delete_job_request) returns (delete_job_response);
}

// Method: pause_job
// Pause a scheduled job (prevents execution until resumed)
message pause_job_request {
  string job_id = 1;
}

message pause_job_response {
  bool success = 1;
  string message = 2;
}

service pause_job_service {
  rpc pause_job(pause_job_request) returns (pause_job_response);
}

// Method: resume_job
// Resume a paused job
message resume_job_request {
  string job_id = 1;
}

message resume_job_response {
  bool success = 1;
  string message = 2;
}

service resume_job_service {
  rpc resume_job(resume_job_request) returns (resume_job_response);
}

// Method: trigger_job
// Trigger immediate execution of a job (ignores schedule)
message trigger_job_request {
  string job_id = 1;
}

message trigger_job_response {
  bool success = 1;
  job_t job = 2;
  string message = 3;
}

service trigger_job_service {
  rpc trigger_job(trigger_job_request) returns (trigger_job_response);
}

// Method: get_calendar_view
// Get jobs formatted for calendar display
message get_calendar_view_request {
  view_type_t view_type = 1;
  string date = 2;
  string timezone = 3;
}

message get_calendar_view_response {
  bool success = 1;
  string start_date = 2;
  string end_date = 3;
  repeated job_t jobs = 4;
}

service get_calendar_view_service {
  rpc get_calendar_view(get_calendar_view_request) returns (get_calendar_view_response);
}


